Replaced icecat with iceweasel.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -11,7 +11,7 @@ set $term urxvt
 # Your preferred application launcher
 set $menu dmenu_run
 # Web browser
-set $web icecat
+set $web iceweasel
 # Screen lock
 set $lock swaylock
 # screenshots
