--- a/.config/sway/config
+++ b/.config/sway/config
@@ -145,15 +145,25 @@ output * bg /usr/share/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
 
+# Behaviour:
+focus_follows_mouse no
+
+# Colours:
+client.background #000000
+client.focused #808080 #808080 #000000 #ffffff #808080
+client.focused_inactive #808080 #222222 #808080 #ffffff #808080
+client.unfocused #333333 #222222 #808080 #ffffff #333333
+
 #
 # Status Bar:
 #
 bar {
-    position top
+    position bottom
     colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
+        statusline #222222
+        background #000000
+        focused_workspace #808080 #808080 #000000
+        inactive_workspace #808080 #222222 #808080
     }
 }
 
