--- a/.config/sway/config
+++ b/.config/sway/config
@@ -16,6 +16,10 @@ set $web iceweasel
 set $lock swaylock -c 000000
 # screenshots
 set $sshot swaygrab
+# ALSA volume
+set $mutetoggle amixer set Master toggle
+set $volumeup amixer set Master 5%+
+set $volumedown amixer set Master 5%-
 
 ### Output configuration
 #
@@ -43,6 +47,12 @@ output * bg /usr/share/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 
     # get screenshot
     bindsym $mod+Shift+S exec $sshot
+
+    # volume
+    bindsym XF86Launch1 exec $mutetoggle
+    bindsym XF86AudioMute exec $mutetoggle
+    bindsym XF86AudioRaiseVolume exec $volumeup
+    bindsym XF86AudioLowerVolume exec $volumedown
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
