--- a/.muttrc
+++ b/.muttrc
@@ -8,8 +8,19 @@ set smtp_url = "smtp://$my_user@smtp.gmail.com:587"
 set smtp_pass = $my_pass
 set imap_user = $my_user
 set imap_pass = $my_pass
+
+# SSL hardening
 set ssl_force_tls = yes
 set ssl_starttls = yes
+set ssl_use_sslv2 = no
+set ssl_use_sslv3 = no
+set ssl_use_tlsv1 = no
+set ssl_use_tlsv1_1 = no
+set ssl_use_tlsv1_2 = yes
+set ssl_verify_dates = yes
+set ssl_verify_host = yes
+
+set certificate_file = ~/.mutt/mailcerts
 
 set folder = "imaps://imap.gmail.com:993"
 
